test/libsolidity/syntaxTests/imports/name_clash_in_import_3.sol
==== Source: a ====
contract A {}
==== Source: b ====
import {A as b} from "a"; contract b {}
// ----
// DeclarationError 2333: (b:26-39='contract b {}'): Identifier already declared.
